# Leviathan

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
leviathan/: __init__.py
leviathan/cli/: main.py
leviathan/core/: __init__.py  config.py  module_base.py  orchestrator.py  pipeline.py
leviathan/extensions/: __init__.py  module_loader.py
leviathan/ml/inference/: __init__.py
leviathan/ml/training/: __init__.py
leviathan/modules/: __init__.py
leviathan/modules/analysis/: __init__.py  advanced_analyzer.py
leviathan/modules/detection/: __init__.py  pattern_detection.py  signature_detection.py
leviathan/modules/discovery/: __init__.py  file_discovery.py  network_discovery.py
leviathan/modules/exploitation/: __init__.py  exploit_simulator.py  exploitation_pipeline.py  exploitation_reporting.py  payload_generator.py  safety_containment.py
leviathan/modules/fuzzing/: __init__.py  basic_fuzzer.py  coverage_analyzer.py
leviathan/modules/ml/: __init__.py  core.py  model_management.py  pattern_evolution.py  pipeline.py  zero_day_hypothesis.py
leviathan/modules/reporting/: __init__.py
leviathan/utils/: exceptions.py  logging.py
test_models/: pattern_evolution.pkl  zero_day_hypothesis.pkl
tests/: test_core.py  test_ml.py  test_modules.py
